# chat

./: .gitignore  Dockerfile  Makefile  pyproject.toml
chat/: app.py
chat/controllers/messages/: message_controller.py
chat/controllers/requests/: request_handlers.py  requests.py
chat/routers/api/: websocket.py
chat/schemas/: request.py  response.py  user.py
chat/storage/: storage.py  users.py
static/: index.html  script.js
tests/test_routes/: conftest.py  test_healthcheck.py  test_websocket.py
