[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Semyon Aleksandrovskiy <psifisher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
websocket = "^0.2.1"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
